RR: -- refactor to use composites -- modified to allow improved resizing behavior -- improved css styles -- moved some obsolete classes. -- made style compatible with HuNI main website -- fixed issue with disappearing interface.

--- a/HUNI/trunk/VL_GWT_prototype/war/virtual_laboratory.css
+++ b/HUNI/trunk/VL_GWT_prototype/war/virtual_laboratory.css
@@ -74,6 +74,10 @@ h1 {
 	padding: 5px 20px 5px 20px;
 }
 
+.huni-crud-button-bar {
+	margin: 5px 0px 5px 0px;
+}
+
 /* Get those round corners in the decorator panel */
  .gwt-DecoratorPanel .middleCenter {
    height: 100%;
