--- a/HUNI/trunk/VL_GWT_prototype/war/slide-show/resources/styles/slide-show.css
+++ b/HUNI/trunk/VL_GWT_prototype/war/slide-show/resources/styles/slide-show.css
@@ -1,5 +1,9 @@
-.huni-slide-show-frame {
+.huni-slide-show-frame-content {
 	font-family: Signika, sans-serif;
 	font-size: 12px;
 	background-color: #CCCCFF;
+}
+
+h1.huni-slide-show-frame-content {
+	font-size: 14px;
 }
