RR: implementing a list of tools -- added a target element in the workspace html -- CommonContainer.init called in controller -- spelling mistakes corrected in assembler -- viewController modified to load and build select element -- created a JSON file to represent the tool repository temporarily.

--- a/HUNI/trunk/virtual_lab/src/angularjs_framework/app/partials/workspace.html
+++ b/HUNI/trunk/virtual_lab/src/angularjs_framework/app/partials/workspace.html
@@ -41,6 +41,10 @@
               <li><a href="#">Link</a></li>
               <li><a href="#">Link</a></li>
             </ul>
+			<div style='display: block;'>
+				<select id="toolKit"> </select>
+				<button id="addTool">Select tool</button>
+			</div>
           </div><!--/.well -->
 
 
