--- a/HUNI/trunk/virtual_lab/src/angularjs_framework/app/partials/tool-history.html
+++ b/HUNI/trunk/virtual_lab/src/angularjs_framework/app/partials/tool-history.html
@@ -12,7 +12,8 @@
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
 	border-radius: 3px;
-	background-color:rgba(0.0, 1.0, 0.0, 0.2);
+	background-color:green;
+	background-color:rgba(0, 255, 0, 0.2);
 	border: 1px solid green;
 }
  -->
