RR: creating a dummy tool. -- can now click on a tool link and retrieve gadget URL.

--- a/HUNI/trunk/virtual_lab/src/angularjs_framework/app/partials/tool-kit.html
+++ b/HUNI/trunk/virtual_lab/src/angularjs_framework/app/partials/tool-kit.html
@@ -4,7 +4,7 @@
 	    <li ng-repeat="category in $parent.categories()" class="nav-header">{{category.name}}
 	    	<ul>
 		    	<li ng-repeat="tool in category.tools" >
-		          <a href="#/tools/{{tool.url}}">{{tool.name}}</a>
+		          <a href="#/tools/{{tool.url}}" ng-click="$parent.selectTool($event);">{{tool.name}}</a>
 		       </li>
 	    	</ul>
 	    </li>
