--- a/HUNI/trunk/virtual_lab/src/angularjs_framework/app/partials/workspace.html
+++ b/HUNI/trunk/virtual_lab/src/angularjs_framework/app/partials/workspace.html
@@ -39,6 +39,10 @@
            </div><!--/.well -->
 
         <div class="content fixed-fixed">
+            <div id="gadgetArea">
+	            <div id="gadgetSite">
+	            </div>
+            </div>
         </div><!--/span-->
       </div><!--/row-->
 
