--- a/HUNI/trunk/virtual_lab/src/angularjs_framework/app/partials/tool-kit.html
+++ b/HUNI/trunk/virtual_lab/src/angularjs_framework/app/partials/tool-kit.html
@@ -4,7 +4,7 @@
 	    <li ng-repeat="category in $parent.toolKit" class="nav-header">{{category.name}}
 	    	<ul>
 		    	<li ng-repeat="tool in category.tools" >
-		          <a href="http://localhost:8000/app/toolLibrary/gadgets{{tool.url}}" ng-click="$parent.selectTool($event);">{{tool.name}}</a>
+		          <a href="{{tool.url}}" ng-click="$parent.selectTool($event);">{{tool.name}}</a>
 		       </li>
 	    	</ul>
 	    </li>
