--- a/HUNI/trunk/virtual_lab/src/angularjs_framework/app/partials/workspace.html
+++ b/HUNI/trunk/virtual_lab/src/angularjs_framework/app/partials/workspace.html
@@ -42,6 +42,8 @@
             <div id="gadgetArea">
 	            <div id="gadgetSite">
 	            </div>
+	            <div id="output">
+	            </div>
             </div>
         </div><!--/span-->
       </div><!--/row-->
