--- a/HUNI/trunk/tool_library/src/main/webapp/WEB-INF/views/tools/create.jspx
+++ b/HUNI/trunk/tool_library/src/main/webapp/WEB-INF/views/tools/create.jspx
@@ -2,7 +2,7 @@
 <div xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:spring="http://www.springframework.org/tags" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
-    <form:create id="fc_au_net_huni_tool_library_model_Tool" modelAttribute="tool" path="/tools" render="${empty dependencies}" z="LdWHbVxq8yt7XGvjqBte9sDPRnQ=">
+    <form:create multipart=”true” id="fc_au_net_huni_tool_library_model_Tool" modelAttribute="tool" path="/tools" render="${empty dependencies}" z="LdWHbVxq8yt7XGvjqBte9sDPRnQ=">
         <field:textarea field="name" id="c_au_net_huni_tool_library_model_Tool_name" required="true" z="o/4ZG6brq4TxXyIl3ALsYvxU/2g="/>
         <field:textarea field="description" id="c_au_net_huni_tool_library_model_Tool_description" required="true" z="/sCOzdSR500mc8CdvfJ9xRgA1ms="/>
         <field:textarea field="url" id="c_au_net_huni_tool_library_model_Tool_url" required="true" z="NagvV94fLRwEpf63+bIc3czq1t8="/>
