--- a/HUNI/trunk/virtual_lab/src/angularjs_framework/app/partials/workspace.html
+++ b/HUNI/trunk/virtual_lab/src/angularjs_framework/app/partials/workspace.html
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">HuNI Virtual Laboratory</a>
+          <a class="brand" href="#"><img alt="HuNI Logo" src="http://huni.net.au/wp-content/uploads/2012/10/huni-logo-21.png" /><span>Virtual Laboratory<span></a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
