--- a/trunk/virtual_lab/.settings/org.eclipse.wst.common.component
+++ b/trunk/virtual_lab/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <property name="context-root" value="virtual_lab"/>
         <property name="java-output-path" value="/virtual_lab/target/classes"/>
     </wb-module>
