--- a/trunk/virtual_lab/src/main/webapp/WEB-INF/views/historyitems/update.jspx
+++ b/trunk/virtual_lab/src/main/webapp/WEB-INF/views/historyitems/update.jspx
@@ -3,9 +3,10 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <form:update id="fu_au_net_huni_model_HistoryItem" modelAttribute="historyItem" path="/console/historyitems" versionField="Version" z="user-managed">
-        <field:input field="toolName" id="c_au_net_huni_model_HistoryItem_toolName" required="true" z="V0+uYszcHdWK1q5Am6gNAfBKgAA="/>
+        <field:input field="toolName" id="c_au_net_huni_model_HistoryItem_toolName" min="2" required="true" z="1I6TUUybtpT/c14jVZkbon0b2SI="/>
         <field:input field="backgroundColour" id="c_au_net_huni_model_HistoryItem_backgroundColour" required="true" validationRegex="#[0-9A-Fa-f][0-9A-Fa-f][0-9A-Fa-f][0-9A-Fa-f][0-9A-Fa-f][0-9A-Fa-f]" z="fGDTIeDxBUZSTvEUQEiChnHYDI4="/>
         <field:select field="owner" id="c_au_net_huni_model_HistoryItem_owner" itemValue="id" items="${researchers}" path="/console/researchers" z="user-managed"/>
         <field:datetime dateTimePattern="${historyItem_executiondate_date_format}" field="executionDate" id="c_au_net_huni_model_HistoryItem_executionDate" required="true" z="bO/LrWRtOkRAgJ3w2PoK4bG/X1k="/>
+        <field:simple field="toolParameters" id="c_au_net_huni_model_HistoryItem_toolParameters" messageCode="entity_reference_not_managed" messageCodeAttribute="Tool Parameter" z="gS5QSRB38WVlEFbtu5IZUv+jA0E="/>
     </form:update>
 </div>
