--- a/virtual_lab/src/main/webapp/WEB-INF/views/menu.jspx
+++ b/virtual_lab/src/main/webapp/WEB-INF/views/menu.jspx
@@ -11,5 +11,9 @@
             <menu:item id="i_historyitem_new" messageCode="global_menu_new" url="/console/historyitems?form" z="user-managed"/>
             <menu:item id="i_historyitem_list" messageCode="global_menu_list" url="/console/historyitems?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
         </menu:category>
+        <menu:category id="c_toolparameter" z="8W9MUs7ae6PcOCvtz0LoNze89Zk=">
+            <menu:item id="i_toolparameter_new" messageCode="global_menu_new" url="/console/toolparameters?form" z="user-managed"/>
+            <menu:item id="i_toolparameter_list" messageCode="global_menu_list" url="/console/toolparameters?page=1&amp;size=${empty param.size ? 10 : param.size}" z="user-managed"/>
+        </menu:category>
     </menu:menu>
 </div>
