--- a/virtual_lab/src/angularjs_framework/app/partials/tool-history.html
+++ b/virtual_lab/src/angularjs_framework/app/partials/tool-history.html
@@ -1,10 +1,10 @@
-<h3>History</h3>
+<h3>Notebook</h3>
 
 <style type="text/css">
 <!--    
 .activity-item
 {
-	font-size: 8px;
+	font-size: 10px;
 	font-style: italic;
 	font-weight: normal;
 	text-transform: none;
@@ -30,7 +30,7 @@
 	</ul>
 </div>
 <div style='display: block;'>
-	<button id="clearHistory">Clear</button>
+	<button id="clearHistory">Clear</button><button id="exportHistory">Export</button>
 </div>
 
  
