--- a/trunk/virtual_lab/src/main/webapp/toolLibrary/test/rest-test/partials/page3.html
+++ b/trunk/virtual_lab/src/main/webapp/toolLibrary/test/rest-test/partials/page3.html
@@ -2,10 +2,11 @@
   <div class="content fixed-fixed">
     <div class="hero-unit">
       <h1>HuNI: Test VL RESTful Web Services</h1>
-      <p>DELETE</p>
-      <p><a class="btn btn-primary btn-large" href="#/page0">GET</a></p>
-      <p><a class="btn btn-primary btn-large" href="#/page1">PUT</a></p>
-      <p><a class="btn btn-primary btn-large" href="#/page2">POST</a></p>
+      <h2>DELETE</h2>
+      <p><a class="btn btn-primary btn-small" href="#/page0">GET</a>
+      <a class="btn btn-primary btn-small" href="#/page1">PUT</a>
+      <a class="btn btn-primary btn-small" href="#/page2">POST</a>
+      <a class="btn btn-small" href="#/page3">DELETE</a></p>
     </div>
   </div><!--/span-->
 </div><!--/row-->
