--- a/virtual_lab/src/angularjs_framework/app/toolLibrary/test/rest-test/partials/page0.html
+++ b/virtual_lab/src/angularjs_framework/app/toolLibrary/test/rest-test/partials/page0.html
@@ -9,7 +9,7 @@
       	<label>Path:&nbsp;</label>
       	<span style="white-space: nowrap; width: 90%; ">
       	<input type = "text" ng-model ="queryPath" placeholder = "http://localhost:8080/virtual_lab/rest/historyitems" style = "width: 90%; display: inline-block; white-space: normal;"/>
-      	<a class="btn btn-small" ng-click="setText()" stye="display: inline-block; white-space: normal;">Query</a>
+      	<a class="btn btn-small" ng-click="setListText()" stye="display: inline-block; white-space: normal;">Query</a>
       	</span>
       	<label>Result:&nbsp;</label>
       	<p style = "font-size: 10px;">{{queryResult}}</p>
