--- a/trunk/virtual_lab/src/angularjs_framework/app/toolLibrary/test/rest-test/partials/page2.html
+++ b/trunk/virtual_lab/src/angularjs_framework/app/toolLibrary/test/rest-test/partials/page2.html
@@ -2,10 +2,10 @@
   <div class="content fixed-fixed">
     <div class="hero-unit">
       <h1>HuNI: Test VL RESTful Web Services</h1>
-      <h2>POST</h2>
+      <h2>PUT</h2>
       <p><a class="btn btn-primary btn-small" href="#/page0">GET</a>
-      <a class="btn btn-primary btn-small" href="#/page1">PUT</a>
-      <a class="btn btn-small" href="#/page2">POST</a>
+      <a class="btn btn-primary btn-small" href="#/page1">POST</a>
+      <a class="btn btn-small" href="#/page2">PUT</a>
       <a class="btn btn-primary btn-small" href="#/page3">DELETE</a></p>
     </div>
   </div><!--/span-->
