--- a/trunk/virtual_lab/src/main/webapp/css/bootstrap.css
+++ b/trunk/virtual_lab/src/main/webapp/css/bootstrap.css
@@ -3649,13 +3649,13 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav > li {
   float: left;
 }
-.navbar .nav > li > a {
+/* .navbar .nav > li > a {
   float: none;
   padding: 10px 15px 10px;
   color: #777777;
   text-decoration: none;
   text-shadow: 0 1px 0 #ffffff;
-}
+} */
 .navbar .nav .dropdown-toggle .caret {
   margin-top: 8px;
 }
