--- a/trunk/virtual_lab/src/main/webapp/css/bootstrap.css
+++ b/trunk/virtual_lab/src/main/webapp/css/bootstrap.css
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap v2.3.0
+ * Bootstrap v2.3.1
  *
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
@@ -3661,19 +3661,19 @@ input[type="submit"].btn.btn-mini {
 }
 .navbar .nav > li > a:focus,
 .navbar .nav > li > a:hover {
-  background-color: transparent;
-  color: #333333;
+  /* background-color: transparent;
+  color: #333333; */
   text-decoration: none;
 }
 .navbar .nav > .active > a,
 .navbar .nav > .active > a:hover,
 .navbar .nav > .active > a:focus {
-  color: #555555;
+ /* color: #555555;
   text-decoration: none;
   background-color: #e5e5e5;
   -webkit-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
   -moz-box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
-  box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125);
+  box-shadow: inset 0 3px 8px rgba(0, 0, 0, 0.125); */
 }
 .navbar .btn-navbar {
   display: none;
@@ -6170,17 +6170,17 @@ button.close {
     width: auto;
     padding: 0;
   }
-  .navbar .brand {
+  /* .navbar .brand {
     padding-left: 10px;
     padding-right: 10px;
     margin: 0 0 0 -5px;
-  }
+  } */
   .nav-collapse {
     clear: both;
   }
   .nav-collapse .nav {
-    float: none;
-    margin: 0 0 10px;
+    float: left !important;
+    margin: 0;
   }
   .nav-collapse .nav > li {
     float: none;
